# conv-transformer

./: .gitignore  README.md  config.yaml  conversation_turns.json  dataset_metrics.json  main.py  overall_metrics.json  overall_metrics_2.json  overall_metrics_3.json  pyproject.toml
classifier/: README.md  attention.py  code_model.py  data.py  train.py
conv_transformer/: attention.py  data.py  train.py
data_shape/: sentence_embeddings.json
diffuser/: fuzzy_embedding.py  map_codes_to_sentences.py  plot_dist.py  preprocessing.py
diffuser/preprocessing/: README.md  data_prep.py  fuzzy_embedding.py  label_speakers.py
diffuser/vq_vae/: dataset.py  export_codes.py  model.py  plot_dist.py  train.py  utils.py
misc-scripts/: check_outcomes.py  sort_attention_scores.py
models/classifier/: code_model.py  train.py
models/preprocessing/: CLEAN_agent_donor.joblib  README.md  data_prep.py  fuzzy_embedding.py
models/vq_vae/: dataset.py  export_codes.py  losses.py  map_codes_to_sentences.py  plot_dist.py  train.py  utils.py
